# wallfacer

./: .gitignore  Cargo.toml  Makefile  clippy.toml  rustfmt.toml  scene_benchmark.json  wallfacer.service
.cargo/: config.toml
doc/ideas/: 3d-vector.md  README.md  audio-reactive.md  classics.md  cross-region.md  distortion.md  geometry-driven.md  impl-phase1.md  impl-phase2.md  impl-phase3.md  metaballs.md  new-primitives.md  primitives-analysis.md  psychedelic.md  sprites-bobs.md  text.md
scripts/: pre-commit
src/: control.rs  geometry.rs  main.rs  math3d.rs  mqtt.rs  noise.rs  particles.rs  texture.rs  util.rs
src/display/: font.rs  mod.rs  pixel_buffer.rs  scroller.rs  text_fx.rs
src/effects/: bobs.rs  copper_bars.rs  dot_tunnel.rs  dvd.rs  earth.rs  earth2.rs  ethereal_ink.rs  fire.rs  glenz.rs  gravity_balls.rs  julia.rs  lava_regions.rs  lightning.rs  living_wall.rs  mandelbrot.rs  metaballs.rs  mod.rs  pipes.rs  plasma.rs  raycaster.rs  region_fire.rs  ripples.rs  rotozoomer.rs  rubber.rs  scroller_demo.rs  snowfall.rs  starfield.rs  testpattern.rs  text_fx_demo.rs  tunnel.rs  vector_balls.rs  vines.rs  vortex.rs  worms.rs
src/input/: calibration.rs  mod.rs
src/regions/: mod.rs  polygon.rs  scene.rs
